added code to track time

--- a/Web_Scraping/WebScraping and image downloading from a url.ipynb
+++ b/Web_Scraping/WebScraping and image downloading from a url.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -68,16 +68,18 @@
       "Image LInk https://images.unsplash.com/photo-1592916100255-63c7696107a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80\n",
       "Extension: .1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80\n",
       "14.png\n",
-      "Image LInk https://trkn.us/pixel/imp/c=8384;p=890843;idfa=;cid=;ord=1592920949686;nocr=1\n",
-      "Extension: .us/pixel/imp/c=8384;p=890843;idfa=;cid=;ord=1592920949686;nocr=1\n",
+      "Image LInk https://trkn.us/pixel/imp/c=8384;p=890843;idfa=;cid=;ord=1592924667334;nocr=1\n",
+      "Extension: .us/pixel/imp/c=8384;p=890843;idfa=;cid=;ord=1592924667334;nocr=1\n",
       "15.png\n",
-      "Image LInk https://secure.insightexpressai.com/adServer/adServerESI.aspx?script=false&bannerID=7314999&rnd=1592920949686&gdpr=&gdpr_consent=&redir=https://secure.insightexpressai.com/adserver/1pixel.gif\n",
+      "Image LInk https://secure.insightexpressai.com/adServer/adServerESI.aspx?script=false&bannerID=7314999&rnd=1592924667334&gdpr=&gdpr_consent=&redir=https://secure.insightexpressai.com/adserver/1pixel.gif\n",
       "Extension: .gif\n",
-      "16.png\n"
+      "16.png\n",
+      "Wall time: 30.5 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "url=input(\"Enter the url :\")\n",
     "requests.get(url)\n",
     "response=requests.get(url)\n",
